2006-01-09  Jonathan Pryor <jonpryor@vt.edu>

	* FileTypes.cs: Remove [Flags] attribute -- these aren't bitfield values.
	* UnixFileSystemInfo.cs: Fix Is<<Type>> properties -- before it would
	  erroneously say that a symlink was a character device.  (This is because
	  device values are *not* [Flags] values, but code was assuming they were.)
	* UnixGroupInfo.cs: Clone the string[] returned from GetMemberNames().  We
	  don't want callers to change the underlying list.

2006-01-07  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: *Actually* put things in alphabetical order (like the
	  comment says).  I can speak english, really I can.

2006-01-06  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
	  not libintl.dll (according to
	  http://www.gimp.org/~tml/gimp/win32/downloads.html).

2006-01-03  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs (CreateExceptionForError): Don't map ENOMEM to
	  System.OutOfMemoryException.  OOME should be reserved for use by the CLR.
	  Return a UnixIOException instead (default behavior).

2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs: Shut up FxCop - add a GC.KeepAlive to 
	  AssertNotDisposed().
	* UnixClient.cs, UnixListener.cs: Use System.MarshalByRefObject as the base
	  class.  These types implement IDisposable and have a finalizer, so if an
	  instance of these types were sent to another AppDomain they'd previously 
	  marshal by copy, which could lead to a double release of an unmanaged
	  resource -- potential badness.  Using MarshalByRefObject fixes this.

2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: s/EACCESS/EACCES/g.  I can't read.

2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs, UnixDirectoryInfo.cs, UnixEnvironment.cs, 
	  UnixFileInfo.cs, UnixFileSystemInfo.cs, UnixGroupInfo.cs,
	  UnixIOException.cs, UnixMarshal.cs, UnixProcess.cs, UnixStream.cs,